[package]
name = "transactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "trx"
path = "src/main.rs"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
color-eyre = "0.6.2"
csv = "1.1.6"
fnv = "1.0.7"
rust_decimal = "1.25.0"
serde = { version = "1.0.139", features = ["derive"] }
tracing = "0.1.35"

[dev-dependencies]
pretty_assertions = "1.2.1"
paste = "1.0.7"
criterion = "0.3"
