[package]
name = "transactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# debug = true

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "trx"
path = "src/main.rs"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["basic_engine", "actor_engine", "stream_engine"]
basic_engine = ["sync"]
actor_engine = ["async"]
stream_engine = ["dep:crossbeam-channel", "dep:num_cpus", "basic_engine"]
async = ["dep:tokio", "dep:async-trait", "dep:futures"]
sync = []


[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
color-eyre = "0.6.2"
csv = "1.1.6"
fnv = "1.0.7"
serde = { version = "1.0.139", features = ["derive"] }
rust_decimal = "1.25.0"
tracing = "0.1.35"

tokio = { version = "1.20.0", features = ["full"], optional = true }
async-trait = { version = "0.1.56", optional = true }
futures = { version = "0.3.21", optional = true }

crossbeam-channel = { version = "0.5.5", optional = true }
num_cpus = { version = "1.13.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.2.1"
paste = "1.0.7"
criterion = { version = "0.3", features = ["async_tokio", "html_reports"] }
